--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ markdown: kramdown
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
-
+- jekyll-feed
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
