--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,9 @@ github_username:  jekyll
 markdown: kramdown
 
 # Build settings
-remote_theme: pages-themes/hacker@v0.2.0
+theme: minima
 plugins:
-- jekyll-remote-theme
-- jekyll-feed
+  - jekyll-feed
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
